# apisnip

./: .gitignore  .goreleaser-release.yml  .goreleaser.yml  AGENTS.md  Cargo.toml  README.md  apisnip.out.yaml  build.rs  install.sh  vla.yaml
.cargo/: config.toml
.github/actions/build-linux/: action.yml
.github/actions/build-macos/: action.yml
.github/actions/build-windows/: action.yml
.github/workflows/: packages.yml  release.yml
resources/: generate-icons.sh
resources/icons/: convert_all.sh  convert_for_linux.sh  convert_for_macos.sh  convert_for_windows.sh
scripts/: bump-version.sh
src/: config.rs  event.rs  file.rs  main.rs  shortcuts.rs  spec_processor.rs  ui.rs
src/ui/: color.rs  mod.rs
src/ui/widget/: internal_logs.rs  mod.rs  shortcuts.rs
vhs/: apisnip.tape  snip.sh
