[package]
name = "apisnip"
description = "Trim an API surface down to size ✂️"
version = "1.1.0"
edition = "2024"
authors = ["Michiel Roos <apisnip.zumble.frap@michielroos.com>"]
license = "MIT"
repository = "https://github.com/michielroos/apisnip"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
color-eyre = "0.6.3"
itertools = "0.14.0"
eyre = "0.6.8"
indexmap = "2.1.0"
reqwest = { version = "0.11.24", features = [ "blocking" ] }
url = "2.5.0"

[build-dependencies]
regex = "1.10.3"
