[package]
name = "apisnip"
description = "A terminal user interface (TUI) tool for trimming OpenAPI specifications down to size ✂️"
version = "1.1.0"
edition = "2021"
authors = ["Michiel Roos <apisnip.zumble.frap@michielroos.com>"]
license = "MIT"
repository = "https://github.com/michielroos/apisnip"
keywords = ["openapi", "swagger", "api", "tui"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
color-eyre = "0.6.3"
itertools = "0.14.0"
eyre = "0.6.8"
indexmap = "2.1.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
url = "2.5.0"

[build-dependencies]
regex = "1.10.3"
