[package]
name = "apisnip"
description = "A terminal user interface (TUI) tool for trimming OpenAPI specifications down to size ✂️"
version = "1.4.57"
edition = "2021"
authors = ["Michiel Roos <apisnip.zumble.frap@michielroos.com>"]
license = "MIT"
repository = "https://github.com/Tuurlijk/apisnip"
keywords = ["openapi", "swagger", "api", "tui"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[dependencies]
# CLI and TUI
clap = { version = "4.5.32", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
tui-textarea = "0.7.0"
color-eyre = "0.6.3"

# Data processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
itertools = "0.14.0"

# Networking
reqwest = { version = "0.12", features = ["blocking", "json", "stream", "rustls-tls"], default-features = false }
url = "2.5.0"

# Search
fuzzy-matcher = "0.3.7"

# Utils
lazy_static = "1.4.0"
termcolor = "1.4.0"
atty = "0.2.14"
supports-color = "2.1.0"
terminal-light = "1.7.0"

[build-dependencies]
regex = "1.10.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

# we often split up a module into multiple files with the main type in a file named after the
# module, so we want to allow this pattern
module_inception = "allow"

# nursery or restricted
as_underscore = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_line_after_doc_comments = "warn"
equatable_if_let = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
map_err_ignore = "warn"
missing_const_for_fn = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_strings = "warn"
or_fun_call = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
unnecessary_self_imports = "warn"
use_self = "warn"
